# nightskycam-images

./: .gitignore  CLAUDE.md  dev_notes.md  mypy.ini  pyproject.toml
.claude/: .nfs0000000001f5b40000000004
.github/workflows/: tests.yml
bash/: create_data_links.sh
models/: cloudy.pt  rainy.pt
nightskycam_images/: classifier_runner.py  db.py  db_api.py  db_view_webapp.py  filters.py  image.py  main.py  symlink_annotator_webapp.py  walk.py
nightskycam_images/templates/db_viewer/: index.html
nightskycam_images/templates/symlink_annotator/: index.html
scripts/: copy_from_allsky.sh  nightskycam_backup.sh  nightskycam_config.sh  reorganize_roots.sh
skills/nightskycam-database/: SKILL.md
skills/nightskycam-export/: SKILL.md
skills/nightskycam-query/: SKILL.md
systemd/: nightskycam-db-update.service  nightskycam-db-update.timer
tests/: conftest.py  test_classify_images.py  test_db.py  test_db_api.py  test_db_view_webapp.py  test_patching.py  test_thumbnail.py  test_video.py  test_walk.py  test_weather.py
