[tool.poetry]
name = "nightskycam-images"
version = "0.1.7"
description = ""
authors = ["Vincent Berenz <vincent.berenz@tuebingen.mpg.de>"]
readme = "README.md"
packages = [{include = "nightskycam_images"}]

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
nightskycam-scorer = "^0.2.1"
opencv-python = "^4.12.0.88"
pillow = "^12.0.0"
toml = "^0.10.2"
tomli = "^2.3.0"
tomli-w = "^1.2.0"
auto-stretch = "^0.0.3"
astropy = "^7.2.0"
imageio = "^2.37.2"
loguru = "^0.7.3"
typer = "^0.20.0"
flask = "^3.1.2"
torch = "^2.9.1"
torchvision = "^0.24.1"
tifffile = "^2025.10.16"
scikit-learn = "^1.7.2"
rich = "^14.2.0"

[tool.poetry.scripts]
# ns.thumb.* — Thumbnail management
"ns.thumb.list" = 'nightskycam_images.main:thumbnails'
"ns.thumb.check" = 'nightskycam_images.main:check_thumbnails'
"ns.thumb.create" = 'nightskycam_images.main:create_missing_thumbnails_cli'
"ns.thumb.copy" = 'nightskycam_images.main:copy_thumbnails'
# ns.files.* — File/folder operations
"ns.files.backup" = 'nightskycam_images.main:move_to_backup'
"ns.files.delete-from-other" = 'nightskycam_images.main:delete_from_other_root'
"ns.files.move-clear" = 'nightskycam_images.main:move_clear_images_cli'
"ns.files.remove-selected" = 'nightskycam_images.main:remove_selected'
# ns.files.web.* — Web applications (file-based)
"ns.files.web.view" = 'nightskycam_images.main:view_webapp'
"ns.files.web.annotate" = 'nightskycam_images.main:annotator_webapp'
"ns.files.web.annotate-symlinks" = 'nightskycam_images.main:symlink_annotator_webapp'
# ns.filter.* — Filtering & export
"ns.filter.export" = 'nightskycam_images.main:filter_export'
"ns.filter.copy" = 'nightskycam_images.main:filter_copy'
"ns.filter.scorer" = 'nightskycam_images.main:scorer_filter'
# ns.ml.* — Machine learning / classification
"ns.ml.classify" = 'nightskycam_images.main:classify_images'
"ns.ml.scorer" = 'nightskycam_images.main:scorer_classifier'
"ns.ml.train" = 'nightskycam_images.classifier.main:app'
# ns.backup.* — Backup pipeline
"ns.backup.route" = 'nightskycam_images.main:backup_route'
# ns.db.* — Database
"ns.db.update" = 'nightskycam_images.main:db_update'
"ns.db.stats" = 'nightskycam_images.main:stats'
"ns.db.web.view" = 'nightskycam_images.main:db_view_webapp'
# ns.annotate — Annotation CLI
"ns.annotate" = 'nightskycam_images.annotator.cli:app'
# ns.util.* — Utilities
"ns.util.patches" = 'nightskycam_images.main:save_patches'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# isort.
[tool.isort]
# Do not distinguish import style (import/from) for sorting.
force_sort_within_sections = true
# Use same formatting as black.
profile = "black"



[dependency-groups]
dev = [
    "black (>=25.12.0,<26.0.0)",
    "isort (>=7.0.0,<8.0.0)",
    "mypy (>=1.19.0,<2.0.0)",
    "types-toml (>=0.10.8.20240310,<0.11.0.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "faker (>=38.2.0,<39.0.0)"
]
